# CHM3

./: CMakeLists.txt  Fourier1.gpl  Rational interpolation with p = 2.txt  Task I.cpp  Task I.h  Task II.cpp  Task II.h  Task III.cpp  Task III.h  Task IV.cpp  Task IV.h  draw_trap.gpl  lab3.cpp
